--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img src="img/victor_.svg" alt="Victor">
       <ul class="flex g5 c1 t4 font-w3">
         <li>
-          <a href="#Experiencia">Experiência</a>
+          <a href="#Experiencia">Experiênccia</a>
         </li>
         <li>
           <a href="#curso">Cursos</a>
@@ -39,7 +39,7 @@
       <img src="img/html-css-js.svg" alt="web sites">
     </div>
     <div class="flex f-direction g3 ">
-      <h1 class="t1 c1">Viictor Alvess Maranhão Resende</h1>
+      <h1 class="t1 c1">Victor Alves Maranhão Resende</h1>
       <h2 class="t3 c1">Desenvolvedor Front End & UX/UI Designer</h2>
       <p class="c2">Localizado em São paulo</p>
       <p class="t3-1 c2 mg-top">Lore
